--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
-!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=>, initial-scale=1.0">
+    <title>Excursion</title>
 </head>
 <body>
-    
-</body>
+    <link href="resources/css/style.css" rel="stylesheet"/>
+    <main>
+        <section>
+            <h1>Discover hidden places in the world aroung you</h1>
+            <a class="Download" href="https://example.com">Download Excursion (Coming soon!)</a>
+            <p><img src="*"/></p>
+        </section>
+    </main>
+        <section>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+        </section>
+            <a>picture of a phone</a>
+            <h2>Coming Soon for iPhone and Android</h2>
+                <img src="*"/>
+            <a class="Download" href="https://example.com">Download Excursion (Coming soon!)</a>
+        <footer>Copyright Excursion Logo</footer>
+
+</body> 
 </html>
