added video of phone app

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <link href="resources/css/style.css" rel="stylesheet"/>
     <main>
         <section>
-            <h1>Discover hidden places in the world aroung you</h1>
+            <h1>Discover hidden places in the world around you</h1>
             <a class="Download" href="https://example.com">Download Excursion (Coming soon!)</a>
-            <p><img src="*"/></p>
+            <p>
+            <video controls>
+                <source src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
+                <p>Your browser doesn't support HTML5 video.</p>
+              </video>
+            </p>
         </section>
     </main>
         <section>
@@ -21,7 +26,6 @@
         </section>
             <a>picture of a phone</a>
             <h2>Coming Soon for iPhone and Android</h2>
-                <img src="*"/>
             <a class="Download" href="https://example.com">Download Excursion (Coming soon!)</a>
         <footer>Copyright Excursion Logo</footer>
 
