updated html with videos and images folder

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
         <section>
             <h2>Your personal travel guide</h2>
             <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+            <p>
+                <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg"/>
+            </p>
+            <p>
+                <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png"/>
+            </p>
         </section>
-            <a>picture of a phone</a>
             <h2>Coming Soon for iPhone and Android</h2>
             <a class="Download" href="https://example.com">Download Excursion (Coming soon!)</a>
         <footer>Copyright Excursion Logo</footer>
