Added &copy for footer symbol

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
             <h2>Coming Soon for iPhone and Android</h2>
             <a class="Download" href="https://example.com">Download Excursion (Coming soon!)</a>
-        <footer>Copyright Excursion Logo</footer>
+        <footer>&copy; Excursion</footer>
 
 </body> 
 </html>
