added 'muted' for controls on video'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Discover hidden places in the world around you</h1>
             <a class="Download" href="https://example.com">Download Excursion (Coming soon!)</a>
             <p>
-            <video autoplay loop controls id="thevideo">
+            <video autoplay loop muted id="thevideo">
                 <source src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
                 <p>Your browser doesn't support HTML5 video.</p>
               </video>
